Dart/testData/highlighting/ErrorsAfterEOF.dart
class Foo<error descr="A class definition must have a body, even if it is empty">o</error>